// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StudentCourseDetailsPageComponent > should snap when all data are still loading 1`] = `
<tm-student-course-details-page
  SortBy="undefined"
  course={[Function Object]}
  courseId="undefined"
  courseService={[Function _CourseService]}
  hasLoadingFailed="false"
  instructorDetails={[Function Array]}
  instructorService={[Function _InstructorService]}
  isLoadingCourse={[Function Boolean]}
  isLoadingInstructor={[Function Boolean]}
  isLoadingStudent={[Function Boolean]}
  isLoadingTeammates={[Function Boolean]}
  route={[Function ActivatedRoute]}
  statusMessageService={[Function _StatusMessageService]}
  student={[Function Object]}
  studentService={[Function _StudentService]}
  tableComparatorService={[Function _TableComparatorService]}
  teammateProfiles={[Function Array]}
  teammateProfilesSortBy="0"
>
  <tm-loading-retry>
    <div
      aria-hidden="true"
    />
  </tm-loading-retry><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner>
</tm-student-course-details-page>
`;

exports[`StudentCourseDetailsPageComponent > should snap when it fails to load 1`] = `
<tm-student-course-details-page
  SortBy="undefined"
  course={[Function Object]}
  courseId="undefined"
  courseService={[Function _CourseService]}
  hasLoadingFailed={[Function Boolean]}
  instructorDetails={[Function Array]}
  instructorService={[Function _InstructorService]}
  isLoadingCourse={[Function Boolean]}
  isLoadingInstructor={[Function Boolean]}
  isLoadingStudent={[Function Boolean]}
  isLoadingTeammates="false"
  route={[Function ActivatedRoute]}
  statusMessageService={[Function _StatusMessageService]}
  student={[Function Object]}
  studentService={[Function _StudentService]}
  tableComparatorService={[Function _TableComparatorService]}
  teammateProfiles={[Function Array]}
  teammateProfilesSortBy="0"
>
  <tm-loading-retry>
    <div
      aria-hidden="true"
    />
  </tm-loading-retry><div
    class="section"
  >
    <div
      class="row top-padded"
    >
      <div
        class="col-md-10"
      >
        <table>
          <tbody>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</tm-student-course-details-page>
`;

exports[`StudentCourseDetailsPageComponent > should snap with default fields 1`] = `
<tm-student-course-details-page
  SortBy="undefined"
  course={[Function Object]}
  courseId="undefined"
  courseService={[Function _CourseService]}
  hasLoadingFailed="false"
  instructorDetails={[Function Array]}
  instructorService={[Function _InstructorService]}
  isLoadingCourse={[Function Boolean]}
  isLoadingInstructor={[Function Boolean]}
  isLoadingStudent={[Function Boolean]}
  isLoadingTeammates="false"
  route={[Function ActivatedRoute]}
  statusMessageService={[Function _StatusMessageService]}
  student={[Function Object]}
  studentService={[Function _StudentService]}
  tableComparatorService={[Function _TableComparatorService]}
  teammateProfiles={[Function Array]}
  teammateProfilesSortBy="0"
>
  <tm-loading-retry>
    <div
      aria-hidden="true"
    />
  </tm-loading-retry><div
    class="section"
  >
    <div
      class="row top-padded"
    >
      <div
        class="col-md-10"
      >
        <table>
          <tbody>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</tm-student-course-details-page>
`;
